--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -1,306 +1,388 @@
-/* BASE - Mobile first */
-html { font-size: 62.5%; }
+/* IMPOSTAZIONI GENERALI */
+
 body {
-    font-family: Poppins, 'Helvetica Neue', sans-serif;
-    font-size: 1.4rem;
-    line-height: 1.5;
-    padding: 15px;
-    background-image: url('../img/sfondo.png');
-    background-position: center center;
+  font-family: Poppins, "Helvetica Neue", sans-serif;
+  line-height: 1.6;
+  padding: 15px;
+  background-image: url("../img/sfondo.png");
+  background-position: center center;
 }
-* { box-sizing: border-box; }
-hr { display: none; }
 
-/* Header */
+* {
+  box-sizing: border-box;
+}
+
+hr {
+  display: none;
+} /* rimuove l'elemento */
+
+/* HEADER */
 header {
-    background: linear-gradient(180deg, rgba(0,160,198,1) 0%, rgba(3,109,134,1) 68%);
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: white;
-    box-shadow: 0 3px 3px #444;
-    margin-bottom: 1.5em;
-    padding: 2em 1.5em;
+  background: rgb(0, 160, 198);
+  background: linear-gradient(180deg, rgba(0, 160, 198, 1) 0%, rgba(3, 109, 134, 1) 68%);
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  box-shadow: 0 3px 3px #444;
+  margin-bottom: 1.5em;
+  padding: 2em 1.5em;
+}
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-header nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-header nav li { list-style: none; }
-header nav li a {
-    color: white;
-    text-decoration: none;
-    padding: .5rem .75rem;
-    display: inline-block;
-}
-header nav li a:hover { color: red; }
-header nav li a::before { content: "\22c6\0020"; }
-
-/* Main */
-main {
-    background: #fff;
-    box-shadow: 0 3px 3px #444;
-    padding: 2em 1em;
-    margin-bottom: 1.5em;
-}
-section {
-    background: #e3e3e3;
+@media screen and (min-width: 800px) {
+  header {
     padding: 1em;
-    margin-bottom: 2em;
-}
-section h2 {
-    text-align: center;
-    color: #333;
-    font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 1em;
+  }
 }
 
-/* Article */
-h1 {
-    font-size: 2.6rem;
-    font-weight: bold;
-    margin-bottom: 0.7em;
+@media screen and (max-width: 1199px) {
+  header .brand img {
+    margin-bottom: 20px;
+  }
 }
-p, address, ul, ol, dl, blockquote { margin-bottom: 1.2em; }
-h1 + p { color: #a0a0a0; }
-ul, ol { margin-left: 2em; }
-a { color: #00A0C6; font-weight: bold; }
-strong { color: #a02571; }
+
+@media screen and (min-width: 1200px) {
+  header {
+    text-align: left;
+  }
+  header .brand,
+  header nav,
+  header .brand p {
+    display: inline-block;
+  }
+
+  header .brand {
+    width: 75%;
+  }
+  header .brand img {
+    vertical-align: middle;
+  }
+  header .brand p {
+    margin-bottom: 0;
+  }
+}
+
+header nav ul {
+  margin: 0;
+}
+header nav li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 10px;
+}
+header nav li:last-child {
+  margin-right: 0;
+}
+header nav li a {
+  color: white;
+  text-decoration: none;
+}
+header nav li a:hover {
+  color: red;
+}
+header nav li a::before {
+  content: "\22c6\0020";
+}
+
+/* MAIN */
+main {
+  background-color: #fff;
+  box-shadow: 0 3px 3px #444;
+  padding: 2em 1em;
+  margin-bottom: 1.5em;
+}
+@media screen and (min-width: 700px) {
+  main {
+    padding: 2em;
+  }
+}
+
+section {
+  background-color: #e3e3e3;
+  padding: 1.5em 1em;
+  margin-bottom: 2em;
+  position: relative;
+}
+
+section h2 {
+  text-align: center;
+  color: #333;
+  font-size: 1.4rem;
+  margin-bottom: 1.7rem;
+  font-weight: bold;
+  background-color: #a3a3a3;
+  padding: 0px 1em;
+}
+
+/* ELEMENTI NEL MAIN - ARTICLE */
+
+h1 {
+  font-size: 2.6rem;
+  line-height: 1.2;
+  font-weight: bold;
+  letter-spacing: -0.03em;
+  margin-bottom: 0.7em;
+}
+
+p,
+address,
+ul,
+ol,
+dl,
+blockquote {
+  margin-bottom: 1.2em;
+}
+
+h1 + p {
+  color: #a0a0a0;
+}
+
+@media screen and (max-width: 499px) {
+  p,
+  ul,
+  ol {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  p,
+  ul,
+  ol {
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  h1 {
+    font-size: 3.6rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    line-height: 2;
+  }
+  section {
+    border-radius: 20px;
+  }
+}
+
+.imgLeft {
+  margin-right: 20px;
+  border: 4px solid #00a0c6;
+  outline: 4px solid #a02571;
+  padding: 3px;
+}
+ul,
+ol {
+  margin-left: 2em;
+}
+a {
+  color: #00a0c6;
+  font-weight: bold;
+}
+strong {
+  color: #a02571;
+  font-weight: bold;
+}
 code {
-    background: #e3e3e3;
-    border: 1px solid #969494;
-    border-radius: 5px;
-    padding: 0 .25em;
+  background-color: #e3e3e3;
+  border: 1px solid #969494;
+  border-radius: 5px;
 }
 iframe {
-    width: 100%;
-    aspect-ratio: 16/9;
-    margin-bottom: 2em;
-    border-radius: 20px;
+  width: 100%;
+  height: auto;
+  margin-bottom: 2em;
+  border-radius: 20px;
 }
 
-/* Tabelle */
-table { width: 100%; margin-bottom: 2em; border-collapse: collapse; }
-caption { font-weight: bold; font-style: italic; }
-thead tr { background: #3f6bca; color: #fff; }
-th, td {
-    padding: 12px 15px;
-    text-align: center;
-}
-tbody tr { border-bottom: 1px solid #ddd; }
-tbody tr:nth-of-type(even) { background: #f3f3f3; }
-tbody tr:last-of-type { border-bottom: 2px solid #3f6bca; }
+@media screen and (min-width: 1200px) {
+  iframe,
+  section {
+    display: inline-block;
+    width: 50%;
+    margin-inline: -2px;
+    vertical-align: middle;
+  }
 
-/* Form */
+  iframe {
+    height: 267px;
+  }
+}
+
+/* TABELLE */
+table {
+  margin-bottom: 2em;
+}
+@media screen and (min-width: 500px) {
+  table {
+    margin: 0 auto 2em;
+  }
+}
+@media screen and (min-width: 700px) {
+  table {
+    width: 70%;
+    margin-block-start: 5rem;
+    margin-block-end: 6rem;
+  }
+}
+
+caption {
+  font-weight: bold;
+  font-style: italic;
+}
+thead tr {
+  background-color: #3f6bca;
+  color: #ffffff;
+}
+th,
+td {
+  padding: 12px 15px;
+  vertical-align: bottom;
+  text-align: center;
+}
+tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:last-of-type {
+  border-bottom: 2px solid #3f6bca;
+}
+
+/* FORM */
 input {
-    padding: 5px;
-    border: 0;
-    border-bottom: 1px dashed #333;
-    width: 100%;
+  padding: 5px;
+  border: 0;
+  border-bottom: 1px dashed #333;
 }
 button {
-    padding: 6px 10px;
-    background: #3f6bca;
-    border: 0;
-    color: white;
-    font-weight: bold;
-    border-radius: 6px;
+  padding: 4px 7px;
+  background-color: #3f6bca;
+  border: 0;
+  color: white;
+  font-weight: bold;
+}
+@media screen and (min-width: 500px) {
+  input {
+    display: inline-block;
+    width: 70%;
+  }
+}
+@media screen and (min-width: 700px) {
+  input {
+    padding: 15px;
+  }
+  button {
+    padding: 15px 30px;
+  }
 }
 
-/* Aside */
-aside {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;
-}
+/* ELEMENTI NELL' ASIDE */
 aside h2 {
-    text-align: center;
-    color: #333;
-    font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 1em;
+  text-align: center;
+  color: #333;
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 1em;
 }
 aside div {
-    background: #e3e3e3;
-    border: 1px solid #c3c3c3;
-    padding: 1em;
+  background-color: #e3e3e3;
+  border: 1px solid #c3c3c3;
+  margin-bottom: 1em;
+  padding: 1em;
+}
+
+@media screen and (min-width: 1200px) {
+  aside div {
+    display: inline-block;
+    width: 33.333%;
+    margin-inline: -2px;
+  }
 }
 aside div p:last-child {
-    font-size: 0.8em;
-    text-align: right;
-    margin-bottom: 0;
+  margin-bottom: 0;
+  font-size: 0.8em;
+  text-align: right;
 }
 
-/* Footer */
+/* FOOTER */
 footer {
-    background: linear-gradient(0deg, rgba(53,53,53,1) 0%, rgba(5,85,103,1) 68%);
-    box-shadow: 0 3px 3px #444;
-    color: #f0f0f0;
-    padding: 1em;
-    text-align: center;
-    font-size: 1.2rem;
-}
-footer a { color: fuchsia; }
-
-/* ====================
-   MEDIA QUERIES
-   ==================== */
-
-/* MEDIUM >= 768px */
-@media screen and (min-width: 768px) {
-    header {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1.5em 2em;
-        text-align: left;
-    }
-    header div {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-    }
-    header nav ul {
-        flex-direction: row;
-        gap: 1rem;
-    }
-
-    /* video + novità affiancati */
-    article {
-        display: flex;
-        flex-direction: column;
-    }
-    article iframe {
-        width: 60%;
-        float: left;
-        margin-right: 2%;
-    }
-    article > section {
-        width: 38%;
-        float: right;
-    }
-
-    /* articoli correlati a 2 colonne */
-    aside {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  background: rgb(53, 53, 53);
+  background: linear-gradient(0deg, rgba(53, 53, 53, 1) 0%, rgba(5, 85, 103, 1) 68%);
+  box-shadow: 0 3px 3px #444;
+  color: #f0f0f0;
+  padding: 1em;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
-/* DESKTOP >= 1200px */
+@media screen and (min-width: 800px) {
+  footer {
+    padding: 1em 12em;
+  }
+}
+
+footer a {
+  color: fuchsia;
+}
+
 @media screen and (min-width: 1200px) {
-    html { font-size: 68.75%; }
-    main {
-        max-width: 1200px;
-        margin: auto;
-        display: grid;
-        grid-template-columns: 3fr 1fr;
-        gap: 2.5rem;
-    }
-    aside {
-        grid-template-columns: repeat(3, 1fr);
-    }
-    h1 { font-size: 3rem; }
-    section h2, aside h2 { font-size: 2.4rem; }
-
-    article iframe,
-    article > section {
-        display: inline-block;
-        vertical-align: top;
-        width: calc(50% - 8px); /* margine per lo spazio tra tag */
-    }
+  header,
+  main,
+  footer {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-/* ====================
-   PRINT
-   ==================== */
 @media print {
-  /* pagina e base tipografica */
-  @page { size: A4; margin: 1.5cm; }
-  html { font-size: 11pt; }
   body {
-    background: none !important;
-    color: #000 !important;
-    padding: 0 !important;
-    -webkit-print-color-adjust: exact;
-    print-color-adjust: exact;
+    font-size: 24px;
+    padding: 0;
+    background-image: none;
   }
-  * {
-    box-shadow: none !important;
-    text-shadow: none !important;
-    background: transparent !important;
+  main {
+    box-shadow: none;
+    margin: 0;
   }
-
-  /* nascondi elementi non essenziali per la stampa */
-  header, nav, footer, aside, iframe, form, button { 
-    display: none !important; 
+  thead tr {
+    background-color: #d3d3d3;
+    color: black;
   }
-
-  /* contenuto principale in colonna singola */
-  main, article, section, table { 
-    width: 100% !important; 
-    max-width: none !important; 
-    float: none !important; 
-    display: block !important; 
-    padding: 0 !important; 
-    margin: 0 0 1rem 0 !important;
-    box-shadow: none !important;
+  thead tr,
+  tbody tr {
+    border-bottom: 1px solid #666;
   }
 
-  /* titoli e paragrafi */
-  h1, h2 { 
-    margin: 0 0 .6rem 0 !important; 
-    color: #000 !important; 
-    text-transform: none !important;
+  header,
+  article section,
+  iframe,
+  aside,
+  footer,
+  .social,
+  .toTop {
+    display: none;
   }
-  h1 { font-size: 1.6rem !important; }
-  h2 { font-size: 1.2rem !important; }
-  p, ul, ol, dl, blockquote { margin: 0 0 .8rem 0 !important; }
-  ul, ol { margin-left: 1.2rem !important; }
-
-  /* link in nero e sottolineati */
-  a, a:visited { color: #000 !important; text-decoration: underline !important; }
-
-  /* codice e badge */
-  code { 
-    border: 1px solid #888 !important; 
-    background: none !important; 
-    padding: 0 .2em !important; 
-  }
-
-  /* tabella leggibile con bordi semplici */
-  table { 
-    border-collapse: collapse !important; 
-    margin: .8rem 0 1.2rem 0 !important; 
-  }
-  caption { 
-    font-style: italic !important; 
-    font-weight: 600 !important; 
-    margin-bottom: .4rem !important; 
-  }
-  thead tr { 
-    background: none !important; 
-    color: #000 !important; 
-    border-bottom: 2px solid #000 !important; 
-  }
-  th, td { 
-    border: 1px solid #000 !important; 
-    padding: .4rem .6rem !important; 
-    text-align: center !important; 
-    vertical-align: bottom !important; 
-  }
-
-  /* controlli di impaginazione */
-  h1, h2, caption { page-break-after: avoid; }
-  table, ul, ol { page-break-inside: avoid; }
 }
